syntax = "proto3";

option java_package = "PaymentService.grpc";


service PaymentService {
  rpc CreatePayment (PaymentRequest) returns (PaymentResponse);
  rpc GetPaymentById (PaymentRequestById) returns (PaymentResponse);
  rpc UpdatePaymentStatus (PaymentStatusUpdateRequest) returns (PaymentResponse);
  rpc ListPayments (Empty) returns (PaymentListResponse);
}

message PaymentRequest {
  int64 id = 1;
  int64 customer = 2;
  int32 bookingType = 3;
  int64 booking = 4;
  string status = 5;
  int64 creditcardref = 6;
}

message PaymentRequestById {
  int64 id = 1;
}

message PaymentStatusUpdateRequest {
  int64 id = 1;
  string status = 2;
}

message PaymentResponse {
  int64 id = 1;
  int64 customer = 2;           // Kunde ID
  int32 bookingType = 3;
  int64 booking = 4;             // Booking ID
  string status = 5;             // Status, 'paid' eller 'not paid'
  int64 creditcardref = 6;       // Kreditkort reference ID
}

message PaymentListResponse {
  repeated PaymentResponse payments = 1;
}

message Empty {}